# Noise-Experiment

./: .gitignore  CMakeLists.txt  LICENSE  Notes.md  README.md
include/: noise.h
include/noise/: noise_remap.hpp  perlin_noise.hpp  perlin_noise_impl.hpp  value_noise.hpp  value_noise_impl.hpp
include/utils/: constants.hpp  fast_convertion.hpp  int_fit.hpp  lerp.hpp
include/vec/: vec2.hpp  vec2_impl.hpp  vec3.hpp  vec3_impl.hpp
src/: main.cpp
src/noise/: value_noise.cpp
src/vec/: vec2.cpp
